[project]
name = "pylpaca"
version = "0.1.0"
description = "A modern FastAPI-based ASCOM Alpaca server in Python"
authors = [
    { name = "Giorgio" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=pylpaca --cov=services --cov-report=term-missing"
