[project]
name = "pylpaca"
version = "0.1.0"
description = "A modern FastAPI-based ASCOM Alpaca server in Python"
authors = [
    { name = "Giorgio" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=services --cov=ASCOMDriver --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "ASCOMDriver/DeviceInterfaces/*",
    "ASCOMDriver/MyDeviceDriver.py",
    "ASCOMDriver/MyDomeDriver.py",
]
